--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,9 @@
 
 # Database Configuration (FIXED)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/irtc?useSSL=false&serverTimezone=UTC
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql:///irtc
 spring.datasource.username=root
 spring.datasource.password=root
 
