--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///irtc
+spring.datasource.url=jdbc:mysql:///anhee
 spring.datasource.username=root
 spring.datasource.password=root
 
