--- a/application.properties
+++ b/application.properties
@@ -1,18 +1,14 @@
-
-
-# Database Configuration (FIXED)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///anhee
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/anhee
+
 spring.datasource.username=root
 spring.datasource.password=root
 
-# Hibernate/JPA Configuration (FIXED)
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Connection Pool Settings (RECOMMENDED)
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
