--- a/application.properties
+++ b/application.properties
@@ -1,14 +1,14 @@
+# Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/anhee
-
 spring.datasource.username=root
 spring.datasource.password=root
 
+# Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+# Optional Hikari settings
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
